# gpt-teacher-v2-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  model.py  prompt.py
app/agents/agent_groq/: groq_agent.py
app/agents/teacher_agent/: __init__.py  model.py  prompt.py  tools.py  utils.py
app/api/: deps.py
app/api/routes/: auth.py  chat_messages.py  classrooms.py  consolidations.py  problems.py  student_sessions.py  students.py  teachers.py
app/core/: config.py  db.py
app/cruds/: chat_message.py  classroom.py  consolidated.py  problem.py  student.py  student_session.py  teacher.py
app/llm/: __init__.py  agents.py  db.py  memory.py  model.py  prompt.py
app/tests/: main.py
app/utils/: auth.py  security.py  security_v2.py
tests/: test_chat.py
