[project]
name = "gpt-teacher-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true



[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
fixable = ["ALL"]
unfixable = []

extend-select = [
    'UP',
    'I',
    'F401'
]
[tool.ruff.lint.pydocstyle]
